linkerd/linkerd-viz/linkerd-viz-ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: linkerd-viz
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.Domain.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: web-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
#    cert-manager.io/cluster-issuer: wildcard-Domain-issuer
spec:
  tls:
    - hosts:
        - dashboard-k8s-cluster.Domain.ir
      secretName:


  rules:
  - host: dashboard-k8s-cluster.Domain.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8084
